--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Doppio+One&display=swap');
+@import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css'); 
+
+
 * {
-    font-family: 'Doppio One';
+    font-family: 'NanumBarunGothic', 'serif';
 }
